<resources>
    <string name="app_name">Smart Zoo</string>
    <string name="text_load_game">Load Game</string>
    <string name="text_new_game">New game</string>
    <string name="available_animals">Available animals:</string>
    <string name="cages">Cages:</string>
    <string name="animals">Animals:</string>
    <string name="janitors">Janitors:</string>
    <string name="feeders">Feeders:</string>
    <string name="veterinaries">Veterinaries:</string>
    <string name="popularity">Popularity:</string>
    <string name="cash">Cash:</string>
    <string name="option_news">News</string>
    <string name="option_animals">Animals</string>
    <string name="option_cages">Cages</string>
    <string name="option_employees">Employees</string>
    <string name="option_market">Market</string>
    <string name="option_buy_animals">Buy animals</string>
    <string name="option_contract_employee">Contract employee</string>
    <string name="option_buy_foods">Buy foods</string>
    <string name="option_build_cages">Build cages</string>
    <string name="option_settings">Settings</string>
    <string name="total_price">Total price:</string>
    <string name="total_animals">Total animals</string>
    <string name="msg_dont_have_money">Insufficient funds</string>
    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>
    <string name="title_news">News</string>
    <string name="available_foods">Available foods</string>
    <string name="total_foods">Total foods:</string>
    <string name="text_buy">Buy</string>
    <string name="message_insufficient_funds">Insufficient funds</string>
    <string name="food_beef">Beef</string>
    <string name="food_chicken">Chicken</string>
    <string name="food_pork">Pork</string>
    <string name="food_apple">Apple</string>
    <string name="food_grape">Grape</string>
    <string name="food_banana">Banana</string>
    <string name="animal_lion">Lion</string>
    <string name="animal_jaguar">Jaguar</string>
    <string name="animal_tiger">Tiger</string>
    <string name="animal_boar">Boar</string>
    <string name="animal_macaw">Macaw</string>
    <string name="animal_snake">Snake</string>
    <string name="animal_turtle">Turtle</string>
    <string name="animal_goose">Goose</string>
    <string name="animal_monkey">Monkey</string>
    <string name="animal_giraffe">Giraffe</string>
    <string name="animal_elephant">Elephant</string>
    <string name="animal_spider">Spider</string>
    <string name="animal_parrot">Parrot</string>
    <string name="animal_toucan">Toucan</string>
    <string name="animal_bear">Bear</string>
    <string name="animal_leopard">Leopard</string>
    <string name="male">male</string>
    <string name="female">female</string>
    <string name="starving">Starving</string>
    <string name="losing_weight">Losing weight</string>
    <string name="eating">Eating</string>
    <string name="digesting">Digesting</string>
    <string name="digestion_finished">Digestion finished</string>
    <string name="not_hungry">No hungry</string>
    <string name="cleaning_cage">"Cleaning cage "</string>
    <string name="resting">Resting</string>
    <string name="ready">Ready</string>
    <string name="status_ready">" Ready "</string>
    <string name="treating_animal">"Treating animal "</string>
    <string name="animal_treatment">"Treatment of animal "</string>
    <string name="done">" Finished!"</string>
    <string name="treating_animals">Treating animals</string>
    <string name="speed">"Speed : "</string>
    <string name="text_age">age</string>
    <string name="text_healthy">Healthy</string>
    <string name="text_sick">Sick</string>
    <string name="text_available_employee">Available employees</string>
    <string name="name_veterinary">Veterinary</string>
    <string name="name_janitor">Janitor</string>
    <string name="name_feeder">Feeder</string>
    <string name="option_stock">Stock</string>
    <string name="text_food_stock">Food in your stock:</string>
    <string name="text_prepare">Prepare</string>
    <string name="random_employee">Random Employee</string>
    <string name="btn_yes">Yes</string>
    <string name="btn_no">No</string>
    <string name="msg_hire_employee_confirm">Are you sure that you want to buy this employee?</string>
    <string name="btn_cancel">Cancel</string>
    <string name="msg_animal_succesfully_bought">Animal sucessfully bought!</string>
    <string name="msg_cage_sucessfully_built">Cage succesfully bought!</string>
    <string name="msg_employee_hired">Employee successfully hired!</string>
    <string name="msg_cage_full">This cage is full, please select another one!</string>
    <string name="message_load_list_food_successful">Food list updated!</string>
    <string name="message_load_food_list_failed">Failed to load food list</string>
    <string name="message_load_food_list_empty">There aren\'t food in the stock!</string>
    <string name="message_load_foods">Loading foods</string>
    <string name="title_foods">Foods</string>
    <string name="message_food_sold">Food sold!</string>
    <string name="msg_construct_cage_confirm">Are you sure that you want to construct this cage?</string>
    <string name="msg_buy_animal_confirm">Are you sure you want to buy this animal?</string>
    <string name="visitors">Visitors:</string>
    <string name="title_exit">Exit</string>
    <string name="message_exit_game">Are you sure you want to quit the current game?</string>
    <string name="title_demission">Demission</string>
    <string name="message_sure">Are you sure this?</string>
    <string name="title_salary">Salary</string>
    <string name="title_veterinaries">Veterinaries</string>
    <string name="message_load_veterinaries">Loading veterinaries</string>
    <string name="message_load_feeders">Loading feeders</string>
    <string name="message_load_list_veterinary_successful">Veterinary list updated!</string>
    <string name="message_load_veterinary_list_failed">Failed to load veterinary list</string>
    <string name="message_load_veterinary_list_empty">There aren\'t veterinary in the stock!</string>
    <string name="message_demit">Demitting...</string>
    <string name="message_demit_failed">Demission failed</string>
    <string name="message_update_salary_failed">Update failed</string>
    <string name="message_update_salary_success">Update success</string>
    <string name="title_feeders">Feeders</string>
    <string name="messa_load_feeders_successful">Load feeder successful</string>
    <string name="messa_load_feeders_empty">There aren\'t feeders</string>
    <string name="messa_load_feeders_failed">Load failed</string>
    <string name="msg_food_successfully_bought">Foods successfully bought!</string>
    <string name="title_confirm">Confirm</string>
    <string name="msg_confirmation_buy_food">Are you sure you want to buy these foods?</string>
    <string name="text_filter">Filter:</string>
    <string name="sell">Sell</string>
    <string name="message_sell">Are you sure?</string>
    <string name="message_load_animals">Loading animals</string>
    <string name="title_animals">Animals</string>
    <string name="message_load_animal_list_successful">Animal list updated!</string>
    <string name="message_load_animal_list_empty">There aren\'t animals in this zoo!</string>
    <string name="message_load_animal_list_failed">It wasn\'t possible update the animals!</string>
    <string name="title_sell">Sell</string>
    <string name="message_sell_success">Animal sold!</string>
    <string name="message_sell_failed">It\'s not possible to sell the animal</string>
    <string name="select_name">Name</string>
    <string name="select_status">Status</string>
    <string name="select_age">Age</string>
    <string name="select_resistance">Resistance</string>
    <string name="select_satisfaction">Satisfaction</string>
    <string name="select_weight">Weight</string>
    <string name="select_sex">Sex</string>
    <string name="select_popularity">Popularity</string>
    <string name="title_select_cage_animal_type">Select an animal type to the cage</string>
    <string name="title_select_animal_cage">Select cage</string>
    <string name="btn_continue">Continue</string>
    <string name="title_set_name_to_animal">"Set a name to the "</string>
    <string name="title_no_cages">No Cages</string>
    <string name="msg_buy_new_cage_for_animal_type">There are no cages for this animal type, do you want to buy a new one?</string>
    <string name="lbl_price">Price</string>
    <string name="lbl_satisfied">Satisfied</string>
    <string name="lbl_status">Status</string>
    <string name="hint_set_name">Insert a name</string>
    <string name="title_new_visitor_arrived">A new visitor has arrived</string>
    <string name="msg_visitor_arriving_part1">"The visitor named as "</string>
    <string name="msg_visitor_arriving_part2">" has arrived in the zoo!"</string>
    <string name="title_visitor_leaving">A visitor is leaving</string>
    <string name="msg_visitor_leaving_part1">"The visitor named as "</string>
    <string name="msg_visitor_leaving_part2">" is leaving the zoo!"</string>
    <string name="msg_news_reputation">" reputation"</string>
    <string name="title_animal_sick">An animal got sick</string>
    <string name="msg_animal_sick_part1">"The animal "</string>
    <string name="msg_animal_sick_part2">" got sick, you should treat him!"</string>
    <string name="title_stock_out_of_food">Your stock ran out of food</string>
    <string name="msg_stock_out_of_food">Your stock has no food right now, you should buy some to feed your animals!</string>
    <string name="title_food_rotten">A food is rotten</string>
    <string name="msg_food_rotten_part1">"The food "</string>
    <string name="msg_food_rotten_part2">" is rotten, you should get rid of it!"</string>
    <string name="msg_loading_news_feed">Loading News feed</string>
    <string name="title_loading_news">News</string>
    <string name="msg_news_succesfully_loaded">News Feed successfully loaded!</string>
    <string name="msg_news_failed_to_load">Failed to load News Feed!</string>
    <string name="msg_no_news_to_load">There are no News to load!</string>
    <string name="message_load_janitor_list">Janitor list loaded!</string>
    <string name="title_general">General</string>
    <string name="menu_sort">Sort by...</string>
    <string name="title_cage">Cages</string>
    <string name="message_load_cages">Loading cages</string>
    <string name="messa_load_cages_successful">Cage List updated</string>
    <string name="messa_destroy_cage">Destroying cage</string>
    <string name="message_destroy_success">Cage destroyed</string>
    <string name="text_clean">Clean</string>
    <string name="text_dirt">Dirt</string>
    <string name="title_janitors">Janitors</string>
    <string name="message_there_arent_rested">There aren\'t janitors rested</string>
    <string name="message_error_rested">Error on load rested janitors</string>
    <string name="message_cleaned_successful">The Cage has been succesfully cleaned</string>
    <string name="message_cleaned_failed">Cage can\'t be cleaned</string>
    <string name="init_date">Init date:</string>
    <string name="salary">Salary:</string>
    <string name="lbl_available_space">"Available space : "</string>
    <string name="lbl_available_space_animals">" animals"</string>
    <string name="txt_years">" years"</string>
    <string name="button_clean">Clean</string>
    <string name="title_select_dirty_cage">Select any dirty cage</string>
    <string name="button_treat">Treat</string>
    <string name="title_select_animal_treat">Select an animal to treat</string>
    <string name="msg_save_zoo">Saving Zoo</string>
    <string name="title_saving">Saving</string>
    <string name="title_loading">Loading</string>
    <string name="msg_loading_zoo">Loading Zoo</string>
</resources>