<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_view_set_animal_name"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/green_500"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_set_name"
        android:id="@+id/edit_text_set_animal_name"
        android:layout_below="@id/text_view_set_animal_name"
        android:inputType="textPersonName|textCapWords"
        android:maxLength="15"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_cancel"
        android:layout_below="@id/edit_text_set_animal_name"
        android:background="@android:color/transparent"
        android:id="@+id/button_cancel_animal_name"
        android:textColor="@color/green_500"
        android:layout_alignParentLeft="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_continue"
        android:text="@string/btn_continue"
        android:background="@android:color/transparent"
        android:layout_below="@+id/edit_text_set_animal_name"
        android:textColor="@color/green_500"
        android:layout_alignParentRight="true"/>



</RelativeLayout>