<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view_available_foods"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scrollbars="vertical"
        android:layout_weight="8"
        android:padding="4dp"/>


    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_weight="0.05"
        android:background="@color/grey_500" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/text_view_price_foods"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:text="@string/total_price"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/text_view_total_foods"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="16dp"
            android:text="@string/total_foods"
            android:textSize="14sp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="4dp">

        <Button
            android:id="@+id/button_buy_foods"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/button_buy"
            android:gravity="center"
            android:text="@string/text_buy"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:visibility="gone" />

        <Button
            android:id="@+id/button_insufficient_funds_foods"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/button_disable"
            android:gravity="center"
            android:text="@string/msg_dont_have_money"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:visibility="gone"/>

    </RelativeLayout>


</LinearLayout>