<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
  >


    <android.support.v7.widget.CardView
        android:id="@+id/card_view_veterinary"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:elevation="8dp"
        android:layout_marginBottom="16dp"
        android:layout_weight="1">


        <RelativeLayout
            android:padding="16dp"
            android:background="@color/blue_400"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/image_view_veterinary"
                android:src="@drawable/ic_syringe"
                android:layout_width="100dp"
                android:layout_height="match_parent" />

            <TextView
                android:textColor="@color/white"
                android:textSize="26sp"
                android:gravity="center"
                android:textStyle="bold"
                android:layout_toRightOf="@id/image_view_veterinary"
                android:text="@string/name_veterinary"
                android:layout_centerVertical="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


        </RelativeLayout>


    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView
        android:id="@+id/card_view_feeder"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:elevation="8dp"
        android:layout_weight="1">

        <RelativeLayout
            android:padding="16dp"
            android:background="@color/red_400"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <ImageView
                android:layout_marginLeft="8dp"
                android:id="@+id/image_view_janitor"
                android:src="@drawable/ic_butcher"
                android:layout_width="100dp"
                android:layout_height="match_parent" />

            <TextView
                android:textColor="@color/white"
                android:textSize="26sp"
                android:gravity="center"
                android:textStyle="bold"
                android:layout_toRightOf="@id/image_view_janitor"
                android:text="@string/name_feeder"
                android:layout_centerVertical="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


        </RelativeLayout>
    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView
        android:id="@+id/card_view_janitor"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <RelativeLayout
            android:elevation="8dp"
            android:padding="16dp"
            android:background="@color/orange_400"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <ImageView
                android:layout_marginLeft="8dp"
                android:id="@+id/image_view_feeder"
                android:src="@drawable/ic_rake"
                android:layout_width="100dp"
                android:layout_height="match_parent" />

            <TextView
                android:textColor="@color/white"
                android:textSize="26sp"
                android:gravity="center"
                android:textStyle="bold"
                android:layout_toRightOf="@id/image_view_feeder"
                android:text="@string/name_janitor"
                android:layout_centerVertical="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


        </RelativeLayout>
    </android.support.v7.widget.CardView>





</LinearLayout>