<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/image_view_janitor"
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:background="@drawable/circle_background"
            android:src="@drawable/ic_janitor"/>

        <TextView
            android:id="@+id/text_view_name_janitor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_toRightOf="@id/image_view_janitor"
            android:maxLength="20"
            android:text="Name of janitor"
            android:textSize="24sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/label_init_janitor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/text_view_name_janitor"
            android:layout_below="@id/text_view_name_janitor"
            android:layout_marginTop="8dp"
            android:text="@string/init_date"/>

        <TextView
            android:id="@+id/text_view_init_janitor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/label_init_janitor"
            android:layout_below="@id/label_init_janitor"
            android:text="24/12/2015"
            android:textColor="@color/green_700"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/label_salary_janitor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/text_view_init_janitor"
            android:layout_below="@id/text_view_init_janitor"
            android:layout_marginTop="4dp"
            android:text="@string/salary"/>

        <TextView
            android:id="@+id/text_view_salary_janitor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/label_salary_janitor"
            android:layout_below="@id/label_salary_janitor"
            android:text="1200,57 $"
            android:textColor="@color/yellow_800"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/label_status_janitor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/image_view_janitor"
            android:layout_marginTop="16dp"
            android:text="Status:"
            android:textSize="22dp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/text_view_status_janitor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/label_status_janitor"
            android:layout_marginTop="4dp"
            android:paddingLeft="48dp"
            android:paddingRight="48dp"
            android:textColor="@color/black"
            android:text="Está cuidando de um animal(Douglas)"
            android:textSize="16dp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/label_clean_cage_janitor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/image_view_cage_janitor"
            android:layout_marginTop="8dp"
            android:text="Limpando jaula:"
            android:textSize="22sp"
            android:textStyle="bold"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_clean"
            android:text="@string/button_clean"
            android:background="@color/green_500"
            android:layout_below="@+id/text_view_status_janitor"
            android:layout_alignLeft="@+id/text_view_salary_janitor"
            android:layout_alignStart="@+id/text_view_salary_janitor" />

        <ImageView
            android:id="@+id/image_view_cage_janitor"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_below="@id/button_clean"
            android:layout_marginTop="8dp"
            android:layout_toRightOf="@id/label_clean_cage_janitor"
            android:src="@drawable/ic_cage"/>

        <TextView
            android:id="@+id/text_view_name_cage_janitor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/image_view_cage_janitor"
            android:layout_marginLeft="4dp"
            android:layout_toRightOf="@+id/image_view_cage_janitor"
            android:maxLength="14"
            android:text="Name of cage"
            android:textSize="18sp"/>


        <TextView
            android:id="@+id/label_task_progress_janitor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/label_clean_cage_janitor"
            android:layout_marginTop="16dp"
            android:text="Tarefa"
            android:textSize="22sp"
            android:textStyle="bold"/>

        <ProgressBar
            android:id="@+id/progress_bar_task_janitor"
            style="@style/ProgressTaskJanitor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/label_task_progress_janitor"
            android:layout_marginTop="4dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:progress="0"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_view_progress_bar_task_janitor"
            android:layout_centerHorizontal="true"
            android:textColor="@color/white"
            android:layout_alignBottom="@+id/progress_bar_task_janitor"
            android:layout_alignTop="@+id/progress_bar_task_janitor"
            android:background="@android:color/transparent"/>

        <TextView
            android:id="@+id/label_stamina_janitor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/progress_bar_task_janitor"
            android:layout_marginTop="16dp"
            android:text="Stamina"
            android:textSize="22sp"
            android:textStyle="bold"/>

        <ProgressBar
            android:id="@+id/progress_bar_stamina_janitor"
            style="@style/ProgressStamina"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/label_stamina_janitor"
            android:layout_marginTop="4dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:progress="50"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_view_progress_bar_stamina_janitor"
            android:layout_centerHorizontal="true"
            android:textColor="@color/white"
            android:layout_alignBottom="@+id/progress_bar_stamina_janitor"
            android:layout_alignTop="@+id/progress_bar_stamina_janitor"
            android:background="@android:color/transparent"/>

        <TextView
            android:id="@+id/label_cages_cleaned_janitor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/progress_bar_stamina_janitor"
            android:layout_marginTop="8dp"
            android:text="Jaulas ja limpadas:"
            android:textSize="22sp"
            android:textStyle="bold"/>


        <!--Aqui pode ser somente linear layout add no java, ou lista crescente, porem sem necessidade acho eu hehe-->
        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view_cages_cleaned"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_below="@id/label_cages_cleaned_janitor"/>


    </RelativeLayout>


</ScrollView>
